--- a/AreaInventario/inventario.html
+++ b/AreaInventario/inventario.html
@@ -9,7 +9,7 @@
 <style type="text/css" id="operaUserStyle"></style></head>
 <body>
   <div class="contenido">
-    <div class="Titulo" style=""> Registro de Cliente </div>
+    <div class="Titulo" style=""> Area de Inventario </div>
     <div class="franja"></div>
         <div class="CajaTexto">
             <div class="NombreProducto" style="
