--- a/RegistroClientes/index.html
+++ b/RegistroClientes/index.html
@@ -9,42 +9,43 @@
 <style type="text/css" id="operaUserStyle"></style></head>
 <body>
   <div class="contenido">
-    <div class="Titulo" style=""> Registro de Cliente </div>
+    <div class="Logo">
+      <img src="Imagen.png">
+      </div>
+    <div class="franja"></div>
+    <label for="" class="registro-cliente">Registro de Clientes</label>
         <div class="CajaTexto">
-            <div class="Nombre_Apellidos" style="
-    display: flex;
-    gap: 60px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 42px;
-    color: #000000;
-">
-                <label>Nombre:   </label> <input type="text" class="txtNombre">  <label>Apellidos: </label> <input type="text" class="txtApellidos">    
+          
+            <div class="Nombre_Apellidos" >
+
+                <label>Nombre:   </label>
+                 <input type="text" class="txtNombre">
+                   <label>Apellidos: </label> 
+                   <input type="text" class="txtApellidos">    
             </div>
 
             <div class="DNI_Telefono">
-                <label>DNI: </label> <input type="text" class="txtDni">  <label>Telefono: </label> <input type="text" class="txtTelefono">                      
+                <label>DNI: </label> <input type="text" class="txtDni"> 
+                 <label>Telefono:</label> <input type="text" class="txtTelefono">                      
             </div>
 
 </div>
     	<div class="Botones">    
      		<button type="button" class="REGISTRAR">
+           <img src="Registrar.png" alt="img Registrar">
                 <label for="textoCaja">REGISTRAR</label>
-                <img src="Registrar.png" alt="img Registrar">
             </button>
             <button type="button" class="EDITAR">
-                <label for="textoCaja">EDITAR</label>
-                <img src="Editar.png" alt="img Editar">
+              <img src="Editar.png" alt="img Editar">
+              <label for="textoCaja">EDITAR</label>
             </button>
             <button type="button" class="LIMPIAR">
-                <label for="textoCaja">LIMPIAR</label>
-                <img src="Limpiar.png" alt="img Limpiar">
+              <img src="Limpiar.png" alt="img Limpiar">
+              <label for="textoCaja">LIMPIAR</label>
              </button>
             <button type="button" class="CANCELAR">
-                <label for="textoCaja">CANCELAR</label>
-                <img src="Cancelar.png" alt="img Cancelar">
+              <img src="Cancelar.png" alt="img Cancelar">
+              <label for="textoCaja">CANCELAR</label>
             </button>
     <button type="button" class="Volver">
             <label for="textoCaja">Volver</label>
@@ -71,7 +72,7 @@
     border-width: 3px 3px 3px 3px;
     width: 91.5%;
 ">
-        <table id="Tabla Registro" style="
+        <table id="TablaRegistro" style="
     border-collapse: collapse;
 ">
     <tbody><tr>
@@ -119,9 +120,7 @@
   </tbody></table>
     </div>
         <div class="Imagenes">
-    <div class="Logo">
-    <img src="Imagen.png">
-    </div>
+    
     <div class="Icono" style="
     position: absolute;
     top: 7.5%;
