--- a/index.html
+++ b/index.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login ECODAR</title>
+    <title>Iniciar sesión</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="/logoECODAR.png">
 </head>
-
 <body>
     <div class="banner">
         <h1>¡Bienvenido a ECODAR!</h1>
     </div>
 
     <div class="container">
-
         <div class="logo">
             <img src="logoECODAR.png" alt="Logo ECODAR">
         </div>
 
         <form class="login-form">
-
-            <div class="form-group" >
+            <div class="form-group">
                 <input type="text" id="usuario" name="usuario" placeholder="Ingrese su Usuario">
-                <img src="userIcon.svg" class="icons"
-            >
+                <img src="userIcon.svg" class="icons">
             </div>
 
-            <div class="form-group" >
+            <div class="form-group">
                 <input type="password" id="contrasena" name="contrasena" placeholder="Ingrese su contraseña">
                 <img src="passwordIcon.svg" class="icons">
             </div>
@@ -39,19 +34,17 @@
                 <a href="https://youtu.be/OWodAv1KHaM">¿Olvidó su contraseña?</a>
             </div>
 
-
-            <button type="button" onclick="window.location.href='MenuPrincipal/menuprincipal.html'">Iniciar
-                Sesión</button>
+            <button type="button" id="login-btn">Iniciar Sesión</button>
 
             <div class="register-msg">
-                ¿No está registrado?&nbsp;<a href="AreaRegistro/registro.html" class="register-link"> Registrarse</a>
+                ¿No está registrado?&nbsp;<a href="AreaRegistro/registro.html" class="register-link">Registrarse</a>
             </div>
-
         </form>
-
-
-
     </div>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
