--- a/MenuPrincipal/menuprincipal.html
+++ b/MenuPrincipal/menuprincipal.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-        <title>Tabla con iconos</title>
-        <link rel="stylesheet" href="menu.css">
-    </head>
-    <body>
+<html><head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title>Tabla con iconos</title>
+    <link rel="stylesheet" href="menu.css">
+</head>
+<body>
+<div class="contenedor">
+<div class="contenido">
+        <div class="cajaLogin">
+            <div class="logo">
+                <img src="logoECODAR.png" class="logoempre">
+            </div>
+    <div class="grid-container">
+        <a href="archivo1.html" class="cuadro">
+            <img src="reportesIcon.svg" class="icons">
+            <h3 class="titulos">Reportes</h3>
+            <p class="descripciones">Reportes de ventas y resumen de inventario</p>
+        </a>
+        <a href="archivo2.html" class="cuadro">
+            <img src="inventarioIcon.svg" class="icons">
+            <h3 class="titulos">Inventario</h3>
+            <p class="descripciones">Agregar, editar o eliminar productos</p>
+        </a>
+        <a href="archivo3.html" class="cuadro">
+            <img src="ventasIcon.svg" class="icons">
+            <h3 class="titulos">Ventas</h3>
+            <p class="descripciones">Registrar ventas y generar boleta</p>
+        </a>
+        <a href="archivo4.html" class="cuadro">
+            <img src="clientesIcon.svg" class="icons">
+            <h3 class="titulos">Clientes</h3>
+            <p class="descripciones">Registrar, editar o eliminar clientes</p>
+        </a>
+        <a href="archivo5.html" class="cuadro">
+            <img src="adminIcon.svg" class="icons">
+            <h3 class="titulos">Administracion</h3>
+            <p class="descripciones">Personalización de logos y nombre</p>
+        </a>
+        <a href="archivo6.html" class="cuadro">
+            <img src="cerrarsesionIcon.svg" class="icons">
+            <h3 class="titulos">Cerrar Sesión</h3>
+            <p></p>
+        </a>
+    </div>
 
-        <div class="logoEmpresa">
-            <img src="../logoECODAR.png" >
-        </div>
-        <div class="grid-container">
-            <a href="../AreaReportes/reportes.html" class="cuadro">
-                <img src="reportesIcon.svg" class="iconos">
-                <h3 class="titulos">Reportes</h3>
-                <p class="descripciones">Reportes de ventas y resumen de inventario</p>
-            </a>
-            <a href="../AreaInventario/inventario.html" class="cuadro">
-                <img src="inventarioIcon.svg" class="iconos">
-                <h3 class="titulos">Inventario</h3>
-                <p class="descripciones">Agregar, editar o eliminar productos</p>
-            </a>
-            <a href="../AreaVentas/index.html" class="cuadro">
-                <img src="ventasIcon.svg" class="iconos">
-                <h3 class="titulos">Ventas</h3>
-                <p class="descripciones">Registrar ventas y generar boleta</p>
-            </a>
-            <a href="../RegistroClientes/index.html" class="cuadro">
-                <img src="clientesIcon.svg" class="iconos">
-                <h3 class="titulos">Clientes</h3>
-                <p class="descripciones">Registrar, editar o eliminar clientes</p>
-            </a>
-            <a href="../AreaAdministracion/administracion.html" class="cuadro">
-                <img src="adminIcon.svg" class="iconos">
-                <h3 class="titulos">Administracion</h3>
-                <p class="descripciones">Personalización de logos y nombre</p>
-            </a>
-            <a href="../index.html" class="cuadro">
-                <img src="cerrarsesionIcon.svg" class="iconos">
-                <h3 class="titulos">Cerrar Sesión</h3>
-                <p class="descripciones"></p>
-            </a>
-        </div>
+    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+</div>
+</div>
+</div>
 
-        <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
-    </body>
-</html>
+</body></html>
