--- a/MenuPrincipal/menuprincipal.html
+++ b/MenuPrincipal/menuprincipal.html
@@ -15,27 +15,27 @@
                 <img src="logoECODAR.png" class="logoempre">
             </div>
     <div class="grid-container">
-        <a href="..//AreaReportes/reportes.html" class="cuadro">
+        <a href="../AreaReportes/reportes.html" class="cuadro">
             <img src="reportesIcon.svg" class="icons">
             <h3 class="titulos">Reportes</h3>
             <p class="descripciones">Reportes de ventas y resumen de inventario</p>
         </a>
-        <a href="..//AreaInvetario/inventario.html" class="cuadro">
+        <a href="../AreaInvetario/inventario.html" class="cuadro">
             <img src="inventarioIcon.svg" class="icons">
             <h3 class="titulos">Inventario</h3>
             <p class="descripciones">Agregar, editar o eliminar productos</p>
         </a>
-        <a href="..//AreaVentas/ventas.html" class="cuadro">
+        <a href="../AreaVentas/index.html" class="cuadro">
             <img src="ventasIcon.svg" class="icons">
             <h3 class="titulos">Ventas</h3>
             <p class="descripciones">Registrar ventas y generar boleta</p>
         </a>
-        <a href="..//AreaClientes/clientes.html" class="cuadro">
+        <a href="..//AreaClientes/index.html" class="cuadro">
             <img src="clientesIcon.svg" class="icons">
             <h3 class="titulos">Clientes</h3>
             <p class="descripciones">Registrar, editar o eliminar clientes</p>
         </a>
-        <a href="..//AreaAdministracion/administracion.html" class="cuadro">
+        <a href="..//AreaAdministracion/index.html" class="cuadro">
             <img src="adminIcon.svg" class="icons">
             <h3 class="titulos">Administracion</h3>
             <p class="descripciones">Personalización de logos y nombre</p>
