--- a/MenuPrincipal/menuprincipal.html
+++ b/MenuPrincipal/menuprincipal.html
@@ -20,7 +20,7 @@
             <h3 class="titulos">Reportes</h3>
             <p class="descripciones">Reportes de ventas y resumen de inventario</p>
         </a>
-        <a href="../AreaInvetario/inventario.html" class="cuadro">
+        <a href="../AreaInventario/inventario.html" class="cuadro">
             <img src="inventarioIcon.svg" class="icons">
             <h3 class="titulos">Inventario</h3>
             <p class="descripciones">Agregar, editar o eliminar productos</p>
@@ -30,12 +30,12 @@
             <h3 class="titulos">Ventas</h3>
             <p class="descripciones">Registrar ventas y generar boleta</p>
         </a>
-        <a href="..//AreaClientes/index.html" class="cuadro">
+        <a href="../AreaClientes/index.html" class="cuadro">
             <img src="clientesIcon.svg" class="icons">
             <h3 class="titulos">Clientes</h3>
             <p class="descripciones">Registrar, editar o eliminar clientes</p>
         </a>
-        <a href="..//AreaAdministracion/index.html" class="cuadro">
+        <a href="../AreaAdministracion/index.html" class="cuadro">
             <img src="adminIcon.svg" class="icons">
             <h3 class="titulos">Administracion</h3>
             <p class="descripciones">Personalización de logos y nombre</p>
