--- a/MenuPrincipal/menuprincipal.html
+++ b/MenuPrincipal/menuprincipal.html
@@ -1,55 +1,61 @@
 <!DOCTYPE html>
-<html><head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en"><head>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Tabla con iconos</title>
-    <link rel="stylesheet" href="menu.css">
+    <meta name="viewport" content="initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
-<div class="contenedor">
-<div class="contenido">
-        <div class="cajaLogin">
-            <div class="logo">
-                <img src="logoECODAR.png" class="logoempre">
-            </div>
-    <div class="grid-container">
-        <a href="../AreaReportes/reportes.html" class="cuadro">
-            <img src="reportesIcon.svg" class="icons">
-            <h3 class="titulos">Reportes</h3>
-            <p class="descripciones">Reportes de ventas y resumen de inventario</p>
-        </a>
-        <a href="../AreaInventario/inventario.html" class="cuadro">
-            <img src="inventarioIcon.svg" class="icons">
-            <h3 class="titulos">Inventario</h3>
-            <p class="descripciones">Agregar, editar o eliminar productos</p>
-        </a>
-        <a href="../AreaVentas/index.html" class="cuadro">
-            <img src="ventasIcon.svg" class="icons">
-            <h3 class="titulos">Ventas</h3>
-            <p class="descripciones">Registrar ventas y generar boleta</p>
-        </a>
-        <a href="../RegistroClientes/index.html" class="cuadro">
-            <img src="clientesIcon.svg" class="icons">
-            <h3 class="titulos">Clientes</h3>
-            <p class="descripciones">Registrar, editar o eliminar clientes</p>
-        </a>
-        <a href="../AreaAdministracion/index.html" class="cuadro">
-            <img src="adminIcon.svg" class="icons">
-            <h3 class="titulos">Administracion</h3>
-            <p class="descripciones">Personalización de logos y nombre</p>
-        </a>
-        <a href="archivo6.html" class="cuadro">
-            <img src="cerrarsesionIcon.svg" class="icons">
-            <h3 class="titulos">Cerrar Sesión</h3>
-            <p></p>
-        </a>
-    </div>
 
-    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
-</div>
-</div>
+<body>
+    <div class="container">
+    <div class="logo">
+                <img src="logoECODAR.png" class="mx-auto d-block">
+            </div>
+  <div class="row justify-content-center">
+    <div class="col-md-4 col-sm-6 border border-dark">
+      <a href="../AreaReportes/reportes.html" class="cuadro">
+        <img src="reportesIcon.svg" class="img-fluid mx-auto d-block">
+        <h3 class="text-center">Reportes</h3>
+        <p class="text-center">Reportes de ventas y resumen de inventario</p>
+      </a>
+    </div>
+    <div class="col-md-4 col-sm-6 border border-dark">
+      <a href="../AreaInventario/inventario.html" class="cuadro">
+        <img src="inventarioIcon.svg" class="img-fluid mx-auto d-block">
+        <h3 class="text-center">Inventario</h3>
+        <p class="text-center">Agregar, editar o eliminar productos</p>
+      </a>
+    </div>
+    <div class="col-md-4 col-sm-6 border border-dark">
+      <a href="../AreaVentas/index.html" class="cuadro">
+        <img src="ventasIcon.svg" class="img-fluid mx-auto d-block">
+        <h3 class="text-center">Ventas</h3>
+        <p class="text-center">Registrar ventas y generar boleta</p>
+      </a>
+    </div>
+    <div class="col-md-4 col-sm-6 border border-dark">
+      <a href="../RegistroClientes/index.html" class="cuadro">
+        <img src="clientesIcon.svg" class="img-fluid  mx-auto d-block">
+        <h3 class="text-center">Clientes</h3>
+        <p class="text-center">Registrar, editar o eliminar clientes</p>
+      </a>
+    </div>
+    <div class="col-md-4 col-sm-6 border border-dark">
+      <a href="../AreaAdministracion/index.html" class="cuadro">
+        <img src="adminIcon.svg" class="img-fluid  mx-auto d-block">
+        <h3 class="text-center">Administración</h3>
+        <p class="text-center">Personalización de logos y nombre</p>
+      </a>
+    </div>
+    <div class="col-md-4 col-sm-6 border border-dark">
+      <a href="archivo6.html" class="cuadro">
+        <img src="cerrarsesionIcon.svg" class="img-fluid  mx-auto d-block">
+        <h3 class="text-center">Cerrar Sesión</h3>
+        <p></p>
+      </a>
+    </div>
+  </div>
 </div>
 
 </body></html>
