--- a/MenuPrincipal/menuprincipal.html
+++ b/MenuPrincipal/menuprincipal.html
@@ -15,42 +15,42 @@
   <div class="row justify-content-center">
     <div class="col-md-4 col-sm-6 border border-dark">
       <a href="../AreaReportes/reportes.html" class="cuadro">
-        <img src="reportesIcon.svg" class="img-fluid mx-auto d-block">
+        <img src="reportesIcon.svg" class="mx-auto d-block" style="height: 135px;" >
         <h3 class="text-center">Reportes</h3>
         <p class="text-center">Reportes de ventas y resumen de inventario</p>
       </a>
     </div>
     <div class="col-md-4 col-sm-6 border border-dark">
       <a href="../AreaInventario/inventario.html" class="cuadro">
-        <img src="inventarioIcon.svg" class="img-fluid mx-auto d-block">
+        <img src="inventarioIcon.svg" class="mx-auto d-block" style="height: 135px;">
         <h3 class="text-center">Inventario</h3>
         <p class="text-center">Agregar, editar o eliminar productos</p>
       </a>
     </div>
     <div class="col-md-4 col-sm-6 border border-dark">
       <a href="../AreaVentas/index.html" class="cuadro">
-        <img src="ventasIcon.svg" class="img-fluid mx-auto d-block">
+        <img src="ventasIcon.svg" class="mx-auto d-block" style="height: 135px;">
         <h3 class="text-center">Ventas</h3>
         <p class="text-center">Registrar ventas y generar boleta</p>
       </a>
     </div>
     <div class="col-md-4 col-sm-6 border border-dark">
       <a href="../RegistroClientes/index.html" class="cuadro">
-        <img src="clientesIcon.svg" class="img-fluid  mx-auto d-block">
+        <img src="clientesIcon.svg" class="mx-auto d-block" style="height: 135px;">
         <h3 class="text-center">Clientes</h3>
         <p class="text-center">Registrar, editar o eliminar clientes</p>
       </a>
     </div>
     <div class="col-md-4 col-sm-6 border border-dark">
       <a href="../AreaAdministracion/index.html" class="cuadro">
-        <img src="adminIcon.svg" class="img-fluid  mx-auto d-block">
+        <img src="adminIcon.svg" class="mx-auto d-block" style="height: 135px;"> 
         <h3 class="text-center">Administración</h3>
         <p class="text-center">Personalización de logos y nombre</p>
       </a>
     </div>
     <div class="col-md-4 col-sm-6 border border-dark">
       <a href="archivo6.html" class="cuadro">
-        <img src="cerrarsesionIcon.svg" class="img-fluid  mx-auto d-block">
+        <img src="cerrarsesionIcon.svg" class="mx-auto d-block" style="height: 135px;">
         <h3 class="text-center">Cerrar Sesión</h3>
         <p></p>
       </a>
