--- a/MenuPrincipal/menuprincipal.html
+++ b/MenuPrincipal/menuprincipal.html
@@ -13,44 +13,44 @@
 <div class="row justify-content-center"><div class="logo"> <img src="logoECODAR.png" class="col-md-4 col-sm-6 img-fluid mx-auto d-block"> </div>
   
   <div class="col-md-4 col-sm-6 border border-dark">
-    <a href="../AreaReportes/reportes.html" class="cuadro">
+    <a href="../AreaReportes/reportes.html" class="text-decoration-none">
       <img style="height: 135px;" class="img-fluid mx-auto d-block" src="reportesIcon.svg">
-      <h3 class="text-center text-dark text-decoration-underline">Reportes</h3>
-      <p class="text-center text-dark text-decoration-underline">Reportes de ventas y resumen de inventario</p>
+      <h3 class="text-center text-dark">Reportes</h3>
+      <p class="text-center text-dark">Reportes de ventas y resumen de inventario</p>
     </a>
   </div>
   <div class="col-md-4 col-sm-6 border border-dark">
-    <a href="../AreaInventario/inventario.html" class="cuadro">
+    <a href="../AreaInventario/inventario.html" class="text-decoration-none">
       <img src="inventarioIcon.svg" class="img-fluid mx-auto d-block" style="height: 135px;">
-      <h3 class="text-center text-dark text-decoration-underline">Inventario</h3>
-      <p class="text-center text-dark text-decoration-underline">Agregar, editar o eliminar productos</p>
+      <h3 class="text-center text-dark">Inventario</h3>
+      <p class="text-center text-dark">Agregar, editar o eliminar productos</p>
     </a>
   </div>
   <div class="col-md-4 col-sm-6 border border-dark">
-    <a href="../AreaVentas/index.html" class="cuadro">
+    <a href="../AreaVentas/index.html" class="text-decoration-none">
       <img src="ventasIcon.svg" class="img-fluid mx-auto d-block" style="height: 135px;">
-      <h3 class="text-center text-dark text-decoration-underline">Ventas</h3>
-      <p class="text-center text-dark text-decoration-underline">Registrar ventas y generar boleta</p>
+      <h3 class="text-center text-dark">Ventas</h3>
+      <p class="text-center text-dark">Registrar ventas y generar boleta</p>
     </a>
   </div>
   <div class="col-md-4 col-sm-6 border border-dark">
-    <a href="../RegistroClientes/index.html" class="cuadro">
+    <a href="../RegistroClientes/index.html" class="text-decoration-none">
       <img src="clientesIcon.svg" class="img-fluid mx-auto d-block" style="height: 135px;">
-      <h3 class="text-center text-dark text-decoration-underline">Clientes</h3>
-      <p class="text-center text-dark text-decoration-underline">Registrar, editar o eliminar clientes</p>
+      <h3 class="text-center text-dark">Clientes</h3>
+      <p class="text-center text-dark">Registrar, editar o eliminar clientes</p>
     </a>
   </div>
   <div class="col-md-4 col-sm-6 border border-dark">
-    <a href="../AreaAdministracion/index.html" class="cuadro">
+    <a href="../AreaAdministracion/index.html" class="text-decoration-none">
       <img src="adminIcon.svg" class="img-fluid mx-auto d-block" style="height: 135px;"> 
-      <h3 class="text-center text-dark text-decoration-underline">Administración</h3>
-      <p class="text-center text-dark text-decoration-underline">Personalización de logos y nombre</p>
+      <h3 class="text-center text-dark">Administración</h3>
+      <p class="text-center text-dark">Personalización de logos y nombre</p>
     </a>
   </div>
   <div class="col-md-4 col-sm-6 border border-dark">
-    <a href="archivo6.html" class="cuadro">
+    <a href="../index.html" class="text-decoration-none">
       <img src="cerrarsesionIcon.svg" class="img-fluid mx-auto d-block" style="height: 135px;">
-      <h3 class="text-center text-dark text-decoration-underline">Cerrar Sesión</h3>
+      <h3 class="text-center text-dark">Cerrar Sesión</h3>
       <p></p>
     </a>
   </div>
