AHORA SI TERMINADO
-Faltaba hacer que el botón regrese al menú principaljsjsj

--- a/AreaReportes/reportes.html
+++ b/AreaReportes/reportes.html
@@ -628,22 +628,33 @@
           </div>
           <!-- TARJETA REGRESAR A MENU PRINCIPAL -->
           <div class="card h-20 mb-3">
-            <div class="row g-0">
-              <div class="col-4">
-                <img
-                  src="/AreaReportes/Volver.png"
-                  class="img-fluid rounded-start"
-                  alt="Icono para volver al menú principal"
-                />
-              </div>
-              <div class="col-8">
-                <div class="card-body">
-                  <h6 class="card-title text-center">
-                    Regresar al menú principal
-                  </h6>
+            <a
+              href="../MenuPrincipal/menuprincipal.html"
+              style="text-decoration: none; color: black"
+            >
+              <div class="row g-0">
+                <div
+                  class="col-5 d-flex justify-content-end align-items-center"
+                >
+                  <img
+                    src="/AreaReportes/Volver.png"
+                    class="img-fluid rounded-start"
+                    alt="Icono para volver al menú principal"
+                    style="margin-right: -10px"
+                  />
+                </div>
+                <div class="col-7">
+                  <div
+                    class="card-body d-flex justify-content-start align-items-center"
+                    style="height: 100%"
+                  >
+                    <h6 class="card-title text-center m-0">
+                      Regresar al menú principal
+                    </h6>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
