--- a/MenuPrincipal/menuprincipal.html
+++ b/MenuPrincipal/menuprincipal.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="container" style="padding: 2rem">
+    <div class="container" style="padding: 0 2rem 1rem 2rem">
       <div class="row justify-content-center">
         <div class="logo">
           <img
