--- a/RegistroClientes/index.html
+++ b/RegistroClientes/index.html
@@ -1,171 +1,294 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
-    <meta name="viewport" content="initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Registro_de_Clientes</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
+    <meta name="viewport" content="initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Registro de Clientes</title>
+    <link rel="icon" type="image/x-icon" href="../logoECODAR.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
     <style type="text/css" id="operaUserStyle"></style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="row">
-            <div class="Cabecera">
-                <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
-                    <div class="Titulo">
-                        <h1>Registro de Clientes</h1>
-                    </div>
-                </div>
-                <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2">
-                    <div class="Logo">
-                        <input type="image" src="Imagen.png" class="imgLogo" width="80px" height="70px">
-                    </div>
-                </div>
+      <div class="row">
+        <div class="Cabecera">
+          <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
+            <div class="Titulo">
+              <h1>Registro de Clientes</h1>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <div class="Franja">
-                </div>
+          </div>
+          <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="Logo">
+              <input
+                type="image"
+                src="Imagen.png"
+                class="imgLogo"
+                width="80px"
+                height="70px"
+              />
             </div>
+          </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="CajasTexto">
-                <div class="col-sm-12 col-md-4 col-lg-2 col-xl-3">
-                    <img class="img-fluid" src="Imagen_Resgistro.png" width="190px" height="190px">
-                </div>
-                <div class="col-sm-12 col-md-8 col-lg-10 col-xl-9">
-                    <div class="Nombre_Apellidos">
-                        <div class="Nombre">
-                            <label for="exampleFormControlInput1" class="form-label">Nombre: </label>
-                            <input class="form-control" type="text" aria-label="default input example">
-                        </div>
-                        <div class="Apellidos">
-                            <label for="label" class="form-label">Apellidos: </label>
-                            <input class="form-control" type="text" aria-label="default input example">
-                        </div>
-                    </div>
-
-                    <div class="DNI_Telefono">
-                        <div class="DNI">
-                            <label for="exampleFormControlInput1" class="form-label">DNI: </label>
-                            <input class="form-control" type="text" aria-label="default input example">
-                        </div>
-                        <div class="Telefono">
-                            <label for="label" class="form-label">Telefono: </label>
-                            <input class="form-control" type="text" aria-label="default input example">
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row m-3">
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <div class="Botones">
-                    <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2">
-                        <button type="button" class="REGISTRAR">REGISTRAR <img src="Registrar.png"
-                                alt="img Registrar"></button>
-                    </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2">
-                        <button type="button" class="EDITAR">EDITAR <img src="Editar.png" alt="Editar.png"></button>
-                    </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2">
-                        <button type="button" class="LIMPIAR">LIMPIAR <img src="Limpiar.png" alt="img Limpiar"></button>
-                    </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2">
-
-                        <button type="button" class="CANCELAR">CANCELAR<img src="Cancelar.png"
-                                alt="img Cancelar"></button>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row m-2">
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <div class="BuscarCliente">
-                    <div class="BarraBuscar">
-                        <input class="form-control" type="text" placeholder="BUSCAR CLIENTE"
-                            aria-label="default input example">
-                    </div>
-                    <div class="ImgBuscar">
-                        <input type="image" src="Buscar.png" class="imgBuscar">
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <div class=" Tabla">
-                    <table class="table table-striped table-hover">
-                        <thead class="table-dark sticky-header">
-                            <tr>
-                                <th>N°</th>
-                                <th>Nombre</th>
-                                <th>Apellidos</th>
-                                <th>DNI</th>
-                                <th>Telefono</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-            <div class="Volver">
-                <button type="button" class="Volver">Volver<img src="Volver.png"
-                    alt="img Volver"></button>
-            </div>
+          <div class="Franja"></div>
         </div>
+      </div>
     </div>
-</body>
 
+    <!--FORMULARIO CLIENTES-->
+    <div class="container">
+      <div class="row">
+        <div class="CajasTexto">
+          <!--contenedor imagen-->
+          <div class="col-sm-12 col-md-4 col-lg-2 col-xl-3">
+            <img
+              class="img-fluid"
+              src="Imagen_Resgistro.png"
+              width="190px"
+              height="190px"
+            />
+          </div>
+          <!--contenedor preguntas-->
+          <div class="col-sm-12 col-md-8 col-lg-10 col-xl-9">
+            <div class="container">
+              <form class="needs-validation" novalidate>
+                <div class="row">
+                  <div class="col-md-6" style="padding-bottom: 1rem">
+                    <div class="form-group">
+                      <label for="validationCustom01"><h5>Nombre:</h5></label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="validationCustom01"
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="col-md-6" style="padding-bottom: 1rem">
+                    <div class="form-group">
+                      <label for="validationCustom02"
+                        ><h5>Apellidos:</h5></label
+                      >
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="validationCustom02"
+                        required
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6" style="padding-bottom: 1rem">
+                    <div class="form-group">
+                      <label for="validationCustom03"><h5>DNI:</h5></label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="validationCustom03"
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="col-md-6" ">
+                    <div class="form-group">
+                      <label for="validationCustom04"
+                        ><h5>Teléfonos:</h5></label
+                      >
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="validationCustom04"
+                        required
+                      />
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--BOTONES-->
+    <div class="container">
+      <div class="row m-3">
+        <div class="col-md-6 col-lg-3">
+          <div class="button-container">
+            <button class="btn btn border-black btn-block" id="btn-registrar">
+              Registrar<img src="Registrar.png" alt="img Registrar" />
+            </button>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="button-container">
+            <button class="btn btn border-black btn-block" id="btn-editar">
+              Editar<img src="Editar.png" alt="Editar.png" />
+            </button>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="button-container">
+            <button
+              class="btn btn-primary border-black btn-block"
+              id="btn-eliminar"
+            >
+              Eliminar<img src="Limpiar.png" alt="img Limpiar" />
+            </button>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="button-container">
+            <button
+              class="btn btn-primary border-black btn-block"
+              id="btn-cancelar"
+            >
+              Cancelar<img src="Cancelar.png" alt="img Cancelar" />
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--TABLA Y BUSCAR CLIENTE-->
+    <div class="container">
+      <div class="row m-2">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+          <div class="BuscarCliente">
+            <div class="BarraBuscar">
+              <input
+                class="form-control"
+                type="text"
+                placeholder="BUSCAR CLIENTE"
+                aria-label="default input example"
+              />
+            </div>
+            <div class="ImgBuscar">
+              <input type="image" src="Buscar.png" class="imgBuscar" />
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+          <div
+            class="table-responsive border"
+            style="max-height: 400px; overflow-y: auto;"
+          >
+            <table class="table table-striped table-hover">
+              <thead class="table-dark sticky-header border-black border-1">
+                <tr>
+                  <th>N°</th>
+                  <th>Nombre</th>
+                  <th>Apellidos</th>
+                  <th>DNI</th>
+                  <th>Telefono</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                    <th scope="row">01</th>
+                    <td>C000001</td>
+                    <td>BOTELLA AGUA CIELO 1L</td>
+                    <td>1</td>
+                    <td>S/3.00</td>
+                    <!-- Nuevo dato -->
+                  </tr>
+                  <tr>
+                    <th scope="row">01</th>
+                    <td>C000001</td>
+                    <td>BOTELLA AGUA CIELO 1L</td>
+                    <td>1</td>
+                    <td>S/3.00</td>
+                    <!-- Nuevo dato -->
+                  </tr><tr>
+                    <th scope="row">01</th>
+                    <td>C000001</td>
+                    <td>BOTELLA AGUA CIELO 1L</td>
+                    <td>1</td>
+                    <td>S/3.00</td>
+                    <!-- Nuevo dato -->
+                  </tr><tr>
+                    <th scope="row">01</th>
+                    <td>C000001</td>
+                    <td>BOTELLA AGUA CIELO 1L</td>
+                    <td>1</td>
+                    <td>S/3.00</td>
+                    <!-- Nuevo dato -->
+                  </tr><tr>
+                    <th scope="row">01</th>
+                    <td>C000001</td>
+                    <td>BOTELLA AGUA CIELO 1L</td>
+                    <td>1</td>
+                    <td>S/3.00</td>
+                    <!-- Nuevo dato -->
+                  </tr><tr>
+                    <th scope="row">01</th>
+                    <td>C000001</td>
+                    <td>BOTELLA AGUA CIELO 1L</td>
+                    <td>1</td>
+                    <td>S/3.00</td>
+                    <!-- Nuevo dato -->
+                  </tr><tr>
+                    <th scope="row">01</th>
+                    <td>C000001</td>
+                    <td>BOTELLA AGUA CIELO 1L</td>
+                    <td>1</td>
+                    <td>S/3.00</td>
+                    <!-- Nuevo dato -->
+                  </tr><tr>
+                    <th scope="row">01</th>
+                    <td>C000001</td>
+                    <td>BOTELLA AGUA CIELO 1L</td>
+                    <td>1</td>
+                    <td>S/3.00</td>
+                    <!-- Nuevo dato -->
+                  </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+        <div class="Volver">
+          <button type="button" class="Volver">
+            Volver<img src="Volver.png" alt="img Volver" />
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <script src="clientes.js"></script>
+  </body>
 </html>
