--- a/RegistroClientes/index.html
+++ b/RegistroClientes/index.html
@@ -183,7 +183,7 @@
             style="max-height: 400px; overflow-y: auto;"
           >
             <table class="table table-striped table-hover">
-              <thead class="table-dark sticky-header border-black border-1">
+              <thead class="table-dark sticky-header">
                 <tr>
                   <th>N°</th>
                   <th>Nombre</th>
@@ -281,13 +281,22 @@
 
     <div class="container">
       <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-        <div class="Volver">
+        <div class="Volver"><a
+          href="../MenuPrincipal/menuprincipal.html"
+          style="text-decoration: none; color: black"
+          >
           <button type="button" class="Volver">
             Volver<img src="Volver.png" alt="img Volver" />
           </button>
         </div>
       </div>
     </div>
+
+
+    
+
+
+
 
     <script src="clientes.js"></script>
   </body>
