Avance Clientes registrados en tablas
- Se borraron todos los datos de ejemplo
+Se añadio la funcionalidad de agregar los datos del form a las tablas

!FALTA CONECTAR CON FIREBASE

--- a/RegistroClientes/index.html
+++ b/RegistroClientes/index.html
@@ -98,7 +98,7 @@
                       />
                     </div>
                   </div>
-                  <div class="col-md-6" ">
+                  <div class="col-md-6">
                     <div class="form-group">
                       <label for="validationCustom04"
                         ><h5>Teléfonos:</h5></label
@@ -180,7 +180,7 @@
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <div
             class="table-responsive border"
-            style="max-height: 400px; overflow-y: auto;"
+            style="max-height: 400px; overflow-y: auto"
           >
             <table class="table table-striped table-hover">
               <thead class="table-dark sticky-header">
@@ -192,87 +192,7 @@
                   <th>Telefono</th>
                 </tr>
               </thead>
-              <tbody>
-                <tr>
-                    <th scope="row">01</th>
-                    <td>C000001</td>
-                    <td>BOTELLA AGUA CIELO 1L</td>
-                    <td>1</td>
-                    <td>S/3.00</td>
-                    <!-- Nuevo dato -->
-                  </tr>
-                  <tr>
-                    <th scope="row">01</th>
-                    <td>C000001</td>
-                    <td>BOTELLA AGUA CIELO 1L</td>
-                    <td>1</td>
-                    <td>S/3.00</td>
-                    <!-- Nuevo dato -->
-                  </tr><tr>
-                    <th scope="row">01</th>
-                    <td>C000001</td>
-                    <td>BOTELLA AGUA CIELO 1L</td>
-                    <td>1</td>
-                    <td>S/3.00</td>
-                    <!-- Nuevo dato -->
-                  </tr><tr>
-                    <th scope="row">01</th>
-                    <td>C000001</td>
-                    <td>BOTELLA AGUA CIELO 1L</td>
-                    <td>1</td>
-                    <td>S/3.00</td>
-                    <!-- Nuevo dato -->
-                  </tr><tr>
-                    <th scope="row">01</th>
-                    <td>C000001</td>
-                    <td>BOTELLA AGUA CIELO 1L</td>
-                    <td>1</td>
-                    <td>S/3.00</td>
-                    <!-- Nuevo dato -->
-                  </tr><tr>
-                    <th scope="row">01</th>
-                    <td>C000001</td>
-                    <td>BOTELLA AGUA CIELO 1L</td>
-                    <td>1</td>
-                    <td>S/3.00</td>
-                    <!-- Nuevo dato -->
-                  </tr><tr>
-                    <th scope="row">01</th>
-                    <td>C000001</td>
-                    <td>BOTELLA AGUA CIELO 1L</td>
-                    <td>1</td>
-                    <td>S/3.00</td>
-                    <!-- Nuevo dato -->
-                  </tr><tr>
-                    <th scope="row">01</th>
-                    <td>C000001</td>
-                    <td>BOTELLA AGUA CIELO 1L</td>
-                    <td>1</td>
-                    <td>S/3.00</td>
-                    <!-- Nuevo dato -->
-                  </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-              </tbody>
+              <tbody id="tablaBodyClientes"></tbody>
             </table>
           </div>
         </div>
@@ -281,22 +201,17 @@
 
     <div class="container">
       <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-        <div class="Volver"><a
-          href="../MenuPrincipal/menuprincipal.html"
-          style="text-decoration: none; color: black"
+        <div class="Volver">
+          <a
+            href="../MenuPrincipal/menuprincipal.html"
+            style="text-decoration: none; color: black"
           >
-          <button type="button" class="Volver">
-            Volver<img src="Volver.png" alt="img Volver" />
-          </button>
+            <button type="button" class="Volver">
+              Volver<img src="Volver.png" alt="img Volver" /></button
+          ></a>
         </div>
       </div>
     </div>
-
-
-    
-
-
-
 
     <script src="clientes.js"></script>
   </body>
