--- a/RegistroClientes/index.html
+++ b/RegistroClientes/index.html
@@ -63,7 +63,7 @@
                 <div class="row">
                   <div class="col-md-6" style="padding-bottom: 1rem">
                     <div class="form-group">
-                      <label for="validationCustom01"><h5>Nombre:</h5></label>
+                      <label for="validationCustom01"><h5>Nombres:</h5></label>
                       <input
                         type="text"
                         class="form-control"
@@ -182,11 +182,11 @@
             class="table-responsive border"
             style="max-height: 400px; overflow-y: auto"
           >
-            <table class="table table-striped table-hover">
+            <table class="table table-striped table-hover text-center">
               <thead class="table-dark sticky-header">
                 <tr>
                   <th>N°</th>
-                  <th>Nombre</th>
+                  <th>Nombres</th>
                   <th>Apellidos</th>
                   <th>DNI</th>
                   <th>Telefono</th>
@@ -212,7 +212,9 @@
         </div>
       </div>
     </div>
-
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="clientes.js"></script>
   </body>
 </html>
