--- a/RegistroClientes/index.html
+++ b/RegistroClientes/index.html
@@ -182,7 +182,9 @@
             class="table-responsive border"
             style="max-height: 400px; overflow-y: auto"
           >
-            <table class="table table-striped table-hover text-center">
+            <table
+              class="table table-bordered table-striped table-hover text-center"
+            >
               <thead class="table-dark sticky-header">
                 <tr>
                   <th>N°</th>
@@ -215,6 +217,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="clientes.js"></script>
   </body>
 </html>
