--- a/AreaInventario/inventario.html
+++ b/AreaInventario/inventario.html
@@ -22,7 +22,7 @@
                 <div class="Cabecera">
                      <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
                         <div class="Titulo">
-                            <h1>Area de Inventario</A></h1>
+                            <h1 class="titulo-invetario">Área de Inventario</A></h1>
                         </div>
                     </div>
                     <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2">
@@ -84,7 +84,7 @@
                         />
                         </div>
                     </div>
-                    <div class="col-md-6" ">
+                    <div class="col-md-6" >
                         <div class="form-group">
                         <label for="validationCustom04"
                             ><h5>Stock:</h5></label
