--- a/AreaAdministracion/index.html
+++ b/AreaAdministracion/index.html
@@ -39,6 +39,6 @@
       </div>
     </div>
     
-    <script src="script.js"></script>
+    <script src="scriptAdmin.js"></script>
   
   </body></html>
