CORRECION HTML AREA VENTAS

--- a/MenuPrincipal/menuprincipal.html
+++ b/MenuPrincipal/menuprincipal.html
@@ -56,7 +56,7 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 border border-dark">
-          <a href="../AreaVentas/index.html" class="text-decoration-none">
+          <a href="../AreaVentas/areaVentas.html" class="text-decoration-none">
             <img
               src="ventasIcon.svg"
               class="img-fluid mx-auto d-block"
